feat: llm cache in home dir